--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
     "lodash": "^4.9.0",
     "node-sass": "^3.7.0",
