--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.1",
+    "react-select": "^1.0.0-beta13",
     "redux": "^3.5.2",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
