--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
